Appended eb to the version number to differentiate my fork from original in maven repo

--- a/jdk-1.5-parent/openlayers-parent/openlayers/pom.xml
+++ b/jdk-1.5-parent/openlayers-parent/openlayers/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>org.wicketstuff</groupId>
 		<artifactId>openlayers-parent</artifactId>
-		<version>1.5-SNAPSHOT</version>
+		<version>1.5eb-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>wicketstuff-openlayers</artifactId>
@@ -38,6 +38,11 @@
 			<name>Nino Martinez</name>
 			<id>nmwael</id>
 			<email>nino.martinez.wael@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Erwin Bolwidt</name>
+			<id>ebolwidt</id>
+			<email>ebolwidt@worldturner.com</email>
 		</developer>
 	</developers>
 
