--- a/jdk-1.5-parent/openlayers-parent/pom.xml
+++ b/jdk-1.5-parent/openlayers-parent/pom.xml
@@ -12,6 +12,7 @@
 
 	<artifactId>openlayers-parent</artifactId>
 	<packaging>pom</packaging>
+        <version>1.5eb-SNAPSHOT</version>
 
 	<name>Openlayers Integration - Parent</name>
 	<description>
